force-app/main/default/objects/NPN_NFR_Software_Request__c/NPN_NFR_Software_Request__c.object-meta.xml
<CustomObject>
    <description>NPN: Created for SDS-891
Stores the NFR SW License Requests raised on the NPN portal by partners.</description>
    <label>NFR SW License Request</label>
    <nameField>
        <displayFormat>NSR-{00000}</displayFormat>
        <label>NFR SW License Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NFR SW License Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>