force-app/main/default/objects/NPN_NFR_Software_Request__c/fields/Comments_From_PBM__c.field-meta.xml
<CustomField>
    <fullName>Comments_From_PBM__c</fullName>
    <label>Comments From PBM</label>
    <type>TextArea</type>
</CustomField>