force-app/main/default/objects/NPN_NFR_Software_Request__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NPN_Demo_Unit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>