force-app/main/default/objects/NPN_NFR_Software_Request__c/fields/DocuSign_Enevelop_ID__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Enevelop_ID__c</fullName>
    <label>DocuSign Enevelop ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>