force-app/main/default/objects/NPN_NFR_Software_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>NFR_Licenses_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>