force-app/main/default/objects/NPN_NFR_Software_Request__c/fields/vCS__c.field-meta.xml
<CustomField>
    <fullName>vCS__c</fullName>
    <label>vCS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>