force-app/main/default/objects/NPN_NFR_Software_Request__c/fields/VDWS__c.field-meta.xml
<CustomField>
    <fullName>VDWS__c</fullName>
    <description>Field label changed to &apos;vWS&apos; from &apos;VDWS&apos; for SDS-3278</description>
    <label>vWS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>