force-app/main/default/objects/NPN_NFR_Software_Request__c/fields/VPC__c.field-meta.xml
<CustomField>
    <fullName>VPC__c</fullName>
    <description>Field label changed to &apos;vPC&apos; from &apos;VPC&apos; for SDS-3278</description>
    <label>vPC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>