force-app/main/default/objects/NPN_NFR_Software_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Status__c</columns>
    <columns>Approver__c</columns>
    <columns>Comments_From_PBM__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>DocuSign_Enevelop_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>